fix(ui): remove hover on first thumbnail in filter page; fix footer social icons list overflow; fix dropdown button area #10

--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -25,7 +25,8 @@
     position: absolute;
     padding-top: 0.0625rem;
     top: 0;
-    right: 0.6875rem;
+    right: 0;
+    padding-right: 0.6875rem;
     height: 100%;
   }
   $zIndex: 9;
